{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 65,
  "lineage": "825f98e1-cfaf-1c9d-44ea-debb28c5df4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038029a2ebfc245ae",
            "arn": "arn:aws:ec2:us-east-1:425924867120:elastic-ip/eipalloc-038029a2ebfc245ae",
            "association_id": "eipassoc-07bdfe0f81c956a0a",
            "domain": "vpc",
            "id": "eipalloc-038029a2ebfc245ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-092cadb8e24d528f0",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-18-213-87-217.compute-1.amazonaws.com",
            "public_ip": "18.213.87.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sre-lab-nat-eip",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-nat-eip",
              "Project": "sre-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1e769742d1cfb49",
            "arn": "arn:aws:ec2:us-east-1:425924867120:instance/i-0c8be46dfc3187ea7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sre-lab-app-server-profile",
            "id": "i-0c8be46dfc3187ea7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc10d2a9bfcebcc0",
            "private_dns": "ip-10-0-3-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-093bcee5ee2d1860e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0acfa2cf07359127f",
            "tags": {
              "Name": "sre-lab-app-server",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-app-server",
              "Project": "sre-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0514bb2fcd2e5d8c0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.app_server_ssm",
            "aws_iam_role.app_server_ssm",
            "aws_security_group.app_server",
            "aws_subnet.private_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:internet-gateway/igw-002f7c8b6a8d140be",
            "id": "igw-002f7c8b6a8d140be",
            "owner_id": "425924867120",
            "tags": {
              "Name": "sre-lab-igw",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-igw",
              "Project": "sre-lab"
            },
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-038029a2ebfc245ae",
            "association_id": "eipassoc-07bdfe0f81c956a0a",
            "connectivity_type": "public",
            "id": "nat-0173f11f46473a3e2",
            "network_interface_id": "eni-092cadb8e24d528f0",
            "private_ip": "10.0.1.10",
            "public_ip": "18.213.87.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0114759427f753b98",
            "tags": {
              "Name": "sre-lab-nat",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-nat",
              "Project": "sre-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:route-table/rtb-0a49f5d49e5b8211f",
            "id": "rtb-0a49f5d49e5b8211f",
            "owner_id": "425924867120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0173f11f46473a3e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-lab-private-rt",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-private-rt",
              "Project": "sre-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:route-table/rtb-0a9f82162e4047ef1",
            "id": "rtb-0a9f82162e4047ef1",
            "owner_id": "425924867120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002f7c8b6a8d140be",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sre-lab-public-rt",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-public-rt",
              "Project": "sre-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b941732c84f8102",
            "route_table_id": "rtb-0a49f5d49e5b8211f",
            "subnet_id": "subnet-0acfa2cf07359127f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef807cbdf681fffe",
            "route_table_id": "rtb-0a49f5d49e5b8211f",
            "subnet_id": "subnet-0bc1a5d905c370d9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a754f7d9632100c8",
            "route_table_id": "rtb-0a9f82162e4047ef1",
            "subnet_id": "subnet-0114759427f753b98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e889d177f8c7f557",
            "route_table_id": "rtb-0a9f82162e4047ef1",
            "subnet_id": "subnet-02c62fb2a7fb930c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:security-group/sg-0514bb2fcd2e5d8c0",
            "description": "Allow SSH from Bastion only, HTTP from VPC, all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0514bb2fcd2e5d8c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from within VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sre-lab-app-server-sg",
            "name_prefix": "",
            "owner_id": "425924867120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sre-lab-app-server-sg",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-app-server-sg",
              "Project": "sre-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:subnet/subnet-0acfa2cf07359127f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acfa2cf07359127f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425924867120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sre-lab-private-1",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-private-1",
              "Project": "sre-lab"
            },
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:subnet/subnet-0bc1a5d905c370d9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc1a5d905c370d9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425924867120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sre-lab-private-2",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-private-2",
              "Project": "sre-lab"
            },
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:subnet/subnet-0114759427f753b98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0114759427f753b98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "425924867120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sre-lab-public-1",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-public-1",
              "Project": "sre-lab"
            },
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:subnet/subnet-02c62fb2a7fb930c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c62fb2a7fb930c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "425924867120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sre-lab-public-2",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-public-2",
              "Project": "sre-lab"
            },
            "vpc_id": "vpc-01ff34994f101cda2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425924867120:vpc/vpc-01ff34994f101cda2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092370488636c8381",
            "default_route_table_id": "rtb-0776cd01f5970212e",
            "default_security_group_id": "sg-01571b6e1d1c21862",
            "dhcp_options_id": "dopt-03b11c9191e87de6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ff34994f101cda2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0776cd01f5970212e",
            "owner_id": "425924867120",
            "tags": {
              "Name": "sre-lab-vpc",
              "Project": "sre-lab"
            },
            "tags_all": {
              "Name": "sre-lab-vpc",
              "Project": "sre-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}